<resources>
    <string name="app_name">EasySay</string>
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referens1">Кнопка "Подключить"</string>
    <string name="referens2">Данная кнопка служит для процесса оцифровки жеста человека в букву. Для того чтобы начать калибровку необходимо в поле ввода ввести букву, если Вы не помните жест необходимо нажать на кнопку «Фото жеста». Далее руку согнуть в жесте и нажать кнопку «Откалибровать».</string>
    <string name="referens3">Кнопка "Калибровка"</string>
    <string name="referens4">Кнопка "Распознавание жестов"</string>
    <string name="referens41">Для распознавания жестов необходимо нажать кнопку «Начать», после чего сгибая руку в определенном жесте в середине окна будет отображаться буква. Для остановки оцифровки жестов необходимо нажать «Остановить»</string>
    <string name="referens5">Кнопка "Обучение"</string>
    <string name="referens51">Для обучения необходимо в поле ввода ввести букву, после чего нажать кнопку «Начать обучение», если Вы забыли, как выглядит жест, необходимо нажать кнопку «Фото жеста». Если Вы верно согнули букву то внизу экрана появиться рисунок в виде "зеленной галочки", если не верно, то "красный крестик". Для остановки изучения определенного жеста необходимо нажать клавишу «Остановка обучения».</string>


        <string name="project">Меня зовут Иванова Елизавета. Я учусь в 10 классе Октябрьской средней школы.
Несколько месяцев назад, я наблюдала следующую ситуацию:Человек с ограниченными пришёл в магазин и начал обращаться на языке жестов. Я увидела, что абсолютно никто не понимает  о чём он говорит. И у этого человека был только один выход:взять ручку и написать что ему требуется. Этот случай меня очень затронул и отложился в памяти.
Здесь я и задумалась над таким важным вопросом:Как решать подобного рода задачи? Как сделать общение между людьми с ограниченными возможностями и обычными людьми безбарьерным. Тут меня посетила мысль:А ведь у каждого человека, в 21 веке, есть смартфон. Вот и было создано приложение " Легко скажи" и само устройство-сенсорная перчатка. На разработку данного проекта мне понадобилось пол года и, конечно, помощь моего руководителя Кристины Викторовны Кустовой, которой я выражаю большую благодарность, также поддержка моей семьи и учителей.
Я очень хотела бы, чтобы этот проект стал  реально работать, его пустили в массовое  производство  и стоимость его, была доступной для каждого.    Перчатка работает совершенно просто, главное знать язык жестов. Суть проста: Первый шаг - это включить на телефоне  Bluetooth. Затем человек надевает перчатку, сгибает руку в нужном жесте и на экране смартфона(в текстовом поле) появляется буква. Потом действия аналогичные. Таким образом можно вывести слова, буквы.
   Для создания специальной сенсорной перчатки для людей с ограниченными возможностями понадобилось:Arduino Pro Micro, акселерометр, Bluetooth HC-05,резистор, соединительрые провода, датчики изгиба, основанные на оптическом эффекте(разработанные Морозовой Эвелиной), перчатка</string>

    </resources>
